# pskovedu-sdk

./: .gitignore  LICENSE  README.en.md  README.md  README.ru.md  pyproject.toml
docs/: README.md  architecture.md  authentication.md  configuration.md  getting-started.md  gotchas.md  known-issues.md  reactive.md  usage.md
pskovedu/: __init__.py  client.py  config.py  constants.py  exceptions.py  logging.py  polling.py  sync.py
pskovedu/assets/: _MODULE.md  __init__.py  cache.py  downloader.py  xls.py
pskovedu/auth/: _MODULE.md  __init__.py  cookies.py  esia.py  manager.py  session_token.py  store.py
pskovedu/breaker/: _MODULE.md  __init__.py  breaker.py
pskovedu/cache/: _MODULE.md  __init__.py  reference.py
pskovedu/methods/: _MODULE.md  __init__.py  _base.py  _bases.py  avatar.py  diary.py  eje.py  journal.py  monitoring.py  notifications.py  qr.py  reception.py  reports.py  reports_print.py  schedule.py  scheduler.py  session.py  util.py  x1.py
pskovedu/models/: _MODULE.md  __init__.py  _base.py  common.py  diary.py  eje.py  enums.py  esia.py  journal.py  monitoring.py  notifications.py  reception.py  reports.py  schedule.py  session.py  types.py  util.py  x1.py
pskovedu/pagination/: _MODULE.md  __init__.py  iterator.py
pskovedu/parsers/: _MODULE.md  __init__.py  bundles.py  participant.py  schedule.py  shell.py
pskovedu/protocol/: _MODULE.md  __init__.py  (+5 more)
tests/: conftest.py  test_eje.py  test_lesson_bell.py  test_public_api.py  test_qr_flow.py  test_reactive_diff.py  test_reports_print.py  test_storage_contract.py  test_util.py  test_watchers.py
(+36 files in other folders)
