[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pskovedu"
version = "0.1.0"
description = "Async Python SDK for the pskovedu.ru portal"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "structlog>=26.0",
    "selectolax>=0.4",
    "anyio>=4.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["pskovedu"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
